--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,18 @@ spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
+#连接池补充设置
+#初始化大小
+spring.datasource.tomcat.initial-size = 2 
+spring.datasource.tomcat.min-idle = 2
+spring.datasource.tomcat.max-idle = 10
+#获得连接等待超时的时间
+spring.datasource.tomcat.max-wait = 80000
+#检测需要关闭的控线连接的间隔时间
+spring.datasource.tomcat.time-between-eviction-runs-millis = 100006
+#配置连接池的最小生存时间
+spring.datasource.tomcat.min-evictable-idle-time-millis=40000
+
 #mybatis配置
 mybatis.type-aliases-package = com.ke.lisijia.spring_boot_demo.model
 mybatis.mapper-locations = classpath:mappers/*.xml
@@ -16,3 +28,6 @@ mybatis.mapper-locations = classpath:mappers/*.xml
 #日志配置
 logging.path = /log
 logging.level.root = INFO
+
+#mongoDB配置
+spring.data.mongodb.uri = mongodb://user1:user1@127.0.0.1:27017/database?authSource=testdb
