--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-
 # 全局属性
 thisProject.name = "spring_boot_demo"
 thisProject.vision = 5
+
+#Spring-Boot编码格式
+banner.charset = UTF-8
+server.tomcat.uri-encoding = UTF-8
+spring.http.encoding.charset = UTF-8
+spring.http.encoding.enabled = true
+spring.http.encoding.force = true
+spring.messages.encoding = UTF-8
 
 #数据源
 spring.datasource.url = jdbc:mysql://localhost:3306/adc_spring?useSSL=false
@@ -11,7 +18,7 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 #连接池补充设置
 #初始化大小
-spring.datasource.tomcat.initial-size = 2 
+spring.datasource.tomcat.initial-size = 2
 spring.datasource.tomcat.min-idle = 2
 spring.datasource.tomcat.max-idle = 10
 #获得连接等待超时的时间
@@ -31,3 +38,16 @@ logging.level.root = INFO
 
 #mongoDB配置
 spring.data.mongodb.uri = mongodb://user1:user1@127.0.0.1:27017/database?authSource=testdb
+
+#常量配置
+teacher.name = "mayoumi"
+teacher.subject = "music"
+
+#Redis配置
+spring.redis.host = 127.0.0.1
+spring.redis.port = 6379
+spring.redis.timeout = 8000
+spring.redis.pool.max-active = 8
+spring.redis.pool.max-wait = -1
+spring.redis.pool.max-idle = 8
+spring.redis.pool.min-idle = 0
