--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <version>1.2.47</version>
         </dependency>
 
+        <!-- log4j2
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>-->
     </dependencies>
 
     <build>
