--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,14 @@ spring.redis.pool.max-active = 8
 spring.redis.pool.max-wait = -1
 spring.redis.pool.max-idle = 8
 spring.redis.pool.min-idle = 0
+
+#控制台打印Sql语句
+##自动驼峰命名转换
+mybatis.configuration.map-underscore-to-camel-case=true
+##控制台打印生成的sql语句
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+#spring.resources.static-locations=file:/
+#spring.http.multipart.file-size-threshold=20Mb
+#spring.http.multipart.max-request-size=80Mb
+#spring.profiles.active=dev
