--- a/pom.xml
+++ b/pom.xml
@@ -77,15 +77,23 @@
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>-->
 
+        <!-- kafka-->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <!--Zookeeper-->
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
             <version>3.4.12</version>
+        </dependency>
+
+        <!--发送邮件JavaMailSender-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
     </dependencies>
