--- a/api_gateway/src/main/resources/application.yml
+++ b/api_gateway/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 spring:
   application:
-    name: eureka-client
+    name: api-gateway
 server:
-  port: 1001
+  port: 8081
+
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8080/eureka/
-  instance:
-    prefer-ip-address: true
 
+zuul:
+  routes:
+    eureka-consumer-ribbon: /ribbon/**
