--- a/eureka_client/src/main/resources/application.yml
+++ b/eureka_client/src/main/resources/application.yml
@@ -10,7 +10,10 @@ spring:
     stream:
       bindings:
         output:
+          #topic 名称
           destination: Consumer-message
+  zipkin:
+    base-url: http://localhost:9411
 
 server:
   port: 1001
