--- a/eureka_consumer/src/main/resources/application.yml
+++ b/eureka_consumer/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   cloud:
     stream:
       bindings:
-        Consumer-message:
+        pipeline:
           #Ïû·Ñ×é
           group: consumer-A
           destination: Consumer-message
